problem z-index header solved

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ header {
   background-color: var(--first-color);
   width: 100%;
   height: 100px;
-  z-index: var(--z-fixed);
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   align-items: center;
